--- a/MyApplication/gradle/wrapper/gradle-wrapper.properties
+++ b/MyApplication/gradle/wrapper/gradle-wrapper.properties
@@ -3,4 +3,4 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.0-rc-1-all.zip
+distributionUrl=file\:/Users/jerry.yin/java_env/gradle-4.4-all.zip
